--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ main {
     align-items: center;
 }
 
-div:hover {
+div.num:hover, div.operator:hover, div.reset:hover, div.delete:hover, div.result:hover {
     cursor: pointer;
+    background-color: cadetblue;
 }
